samples/_failures_safe/1761040384_0bae6d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_826c562c.c: In function ‘main’:
./samples/SAFE/__tmp_826c562c.c:181: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_826c562c.c:180:5: error: expected declaration or statement at end of input
  180 |     if
      |     ^~
